set common animation for all pages

--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -5,23 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-}
-
 .top-57 {
   top: 232px;
 }
@@ -32,4 +15,11 @@ body {
 
 .top-88 {
   top: 320px;
+}
+
+.parallax {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
